--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "jest --no-cache ./*",
     "build": "tsc",
     "start": "node -r dotenv/config lib/server.js",
     "dev": "concurrently \"tsc -w\" \"nodemon -r dotenv/config lib/server.js\""
@@ -20,10 +21,13 @@
     "nodemon": "^2.0.20"
   },
   "devDependencies": {
+    "@jest/globals": "^29.4.1",
     "@types/express": "^4.17.15",
-  
+    "@types/jest": "^29.4.0",
     "concurrently": "^7.6.0",
+    "jest": "^29.4.1",
     "nodemon": "^2.0.20",
+    "ts-jest": "^29.0.5",
     "tslint": "^6.1.3",
     "typescript": "^4.9.4"
   }
